[package]
name = "ckb-zero-lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.17.2"
merkle-cbt = { version = "0.3.1", default-features = false }
blake2b-ref = "0.3.1"

[build-dependencies]
cc = "1.0"

[profile.release]
overflow-checks = true
lto = true
