[package]
name = "ckb-zero-lock-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle-cbt = { version = "0.3.1", default-features = false }
ckb-chain-spec = "0.111.0-rc8"
ckb-error = "0.111.0-rc8"
ckb-hash = "0.111.0-rc8"
ckb-script = "0.111.0-rc8"
ckb-traits = "0.111.0-rc8"
ckb-types = "0.111.0-rc8"
lazy_static = "1.4.0"
ckb-always-success-script = "0.0.1"
rand = "0.8.5"

[dev-dependencies]
proptest = "1.0.0"
ckb-mock-tx-types = { git = "https://github.com/nervosnetwork/ckb-standalone-debugger", rev = "b7ca5cc" }
serde_json = "1.0.103"
