[package]
name = "libfuzzer-protobuf-fuzzer"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-zero-lock = { path = "../.." }
clap = { version = "4.5.40", features = ["cargo", "derive"] }

[dependencies.protobuf-ckb-syscalls]
git = "https://github.com/xxuejie/ckb-script-fuzzing-toolkit"
rev = "479052e"

[features]
default = []
text-format = ["protobuf-ckb-syscalls/text-format"]

[profile.release]
debug = true
