[package]
name = "libfuzzer-fdp-fuzzer-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.libfuzzer-fdp-fuzzer]
path = ".."

[[bin]]
name = "fuzzing_target"
path = "fuzz_targets/fuzzing_target.rs"
test = false
doc = false
bench = false

[profile.release]
debug = true
